--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -3,7 +3,7 @@
 //=================================================
 .shift-modal {
 	padding-left: 0 !important;
-	padding-right: 17px !important;
+	// padding-right: 17px !important;
 }
 
 .modal {
