--- a/src/assets/fonts/Recoleta/Recoleta-Bold/style.css
+++ b/src/assets/fonts/Recoleta/Recoleta-Bold/style.css
@@ -1,6 +1,7 @@
 @font-face {
-    font-family: 'Recoleta';
-    src: local('Recoleta Bold'), local('Recoleta-Bold'),
+    font-family: 'Recoleta-Bold';
+    src: local('Recoleta Bold'), url('Recoleta-Bold'),
+        url('Recoleta-Bold.eot') format('embedded-opentype'),
         url('Recoleta-Bold.woff2') format('woff2'),
         url('Recoleta-Bold.woff') format('woff'),
         url('Recoleta-Bold.ttf') format('truetype');
