--- a/src/assets/sass/content/_image.scss
+++ b/src/assets/sass/content/_image.scss
@@ -22,7 +22,7 @@
             outline: none;
             
             img, svg {
-                // width: 100% !important;
+                width: 100% !important;
                 height: 100% !important;
                 object-fit: cover;
                 -o-object-fit: cover;
