--- a/src/assets/sass/blocks/_contacts.scss
+++ b/src/assets/sass/blocks/_contacts.scss
@@ -32,7 +32,7 @@
 		z-index: 2;
 		max-width: 1426px;
 		margin: auto;
-		margin-top: -11.9%;
+		margin-top: -4%;
 		padding-left: $space_md;
 		padding-right: $space_md;
 
@@ -59,7 +59,7 @@
 			}
 
 			.contact-me-shortcode {
-				padding-top: $space_lg;
+				padding-top: $space_lg / 1.25;
 				max-width: 1050px;
 				margin: auto;
 
