--- a/src/assets/sass/blocks/_logo.scss
+++ b/src/assets/sass/blocks/_logo.scss
@@ -19,6 +19,7 @@
 .site-header,
 #menu-modal .modal-header {
     .logo {
+        overflow: visible;
         img {
             width: 160px;
         }
