--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -259,70 +259,71 @@
 // #3 Theme default style
 =================================================*/
 html {
-    -webkit-overflow-scrolling: touch;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-size: 19px;
-    scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 19px;
+  scroll-behavior: smooth;
 
-    @media #{$media_xxl} {
-        font-size: 17.5px;
-    }
+  @media #{$media_xxl} {
+    font-size: 17.5px;
+  }
 
-    @media #{$media_xl} {
-        font-size: 16px;
-    }
+  @media #{$media_xl} {
+    font-size: 16px;
+  }
 
-    @media #{$media_sm} {
-        font-size: 14px;
-    }
+  @media #{$media_sm} {
+    font-size: 14px;
+  }
 }
 
 body {
-    background-color: $body_background_color;
-    font-size: 19px;
-    min-width: 320px;
+  background-color: $body_background_color;
+  font-size: 19px;
+  min-width: 320px;
 
-    @media #{$media_xxl} {
-        font-size: 17.5px;
-    }
+  @media #{$media_xxl} {
+    font-size: 17.5px;
+  }
 
-    @media #{$media_xl} {
-        font-size: 16px;
-    }
+  @media #{$media_xl} {
+    font-size: 16px;
+  }
 
-    @media #{$media_sm} {
-        font-size: 14px;
-    }
+  @media #{$media_sm} {
+    font-size: 14px;
+  }
 }
 
 ::selection {
-    background: $body_main_element_primary_color;
-    color: $white;
+  background: $body_main_element_primary_color;
+  color: $white;
 }
 
-.wrapper, [class*='-section'][class*='section-boxed'] > [class*='-container'] {
-    max-width: $wrapper_max_w;
-    margin: auto;
-    padding-left: $wrapper_p_l;
-    padding-right: $wrapper_p_r;
+.wrapper,
+[class*="-section"][class*="section-boxed"] > [class*="-container"] {
+  max-width: $wrapper_max_w;
+  margin: auto;
+  padding-left: $wrapper_p_l;
+  padding-right: $wrapper_p_r;
 
-    @media #{$media_xxl} {
-        padding-left: $wrapper_p_l_xxl;
-        padding-right: $wrapper_p_r_xxl;
-    }
+  @media #{$media_xxl} {
+    padding-left: $wrapper_p_l_xxl;
+    padding-right: $wrapper_p_r_xxl;
+  }
 
-    @media #{$media_xl} {
-        padding-left: $wrapper_p_l_xl;
-        padding-right: $wrapper_p_r_xl;
-    }
+  @media #{$media_xl} {
+    padding-left: $wrapper_p_l_xl;
+    padding-right: $wrapper_p_r_xl;
+  }
 
-    @media #{$media_sm} {
-        padding-left: $wrapper_p_l_sm;
-        padding-right: $wrapper_p_r_sm;
-    }
+  @media #{$media_sm} {
+    padding-left: $wrapper_p_l_sm;
+    padding-right: $wrapper_p_r_sm;
+  }
 }
 
 /*=============================
@@ -615,7 +616,8 @@ body {
 //}
 
 @media #{$media_xl} {
-    .login-page-image-wrapper {
-        text-align: center;
-    }
+  .login-page-image-wrapper {
+    text-align: center;
+  }
 }
+
