--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -53,7 +53,7 @@ $body_text_tertiary_color:                            #ffffff; // For dark backg
 $body_headline_color:                                 $metallic-seaweed;
 $body_links_color:                                    #274035;
 $body_links_hover_color:                              #8d9893;
-$body_background_color:                               #f3f2f1;
+$body_background_color:                               #fff;
 
 $body_main_element_primary_color:                     #274035;
 $body_main_element_secondary_color:                   #000000;
@@ -62,11 +62,11 @@ $body_mark_background:                                #fcf8e3;
 
 // Header
 $header_color:                                        #274035;
-$header_background_color:                             #f3f2f1;
+$header_background_color:                             #fff;
 
 // Footer
 $footer_color:                                        #274035;
-$footer_background_color:                             #f3f2f1;
+$footer_background_color:                             #fff;
 
 // Breadcrumb
 $breadcrumb_color:                                    #274035;
@@ -89,7 +89,7 @@ $menu_primary_links_active_color:                     #8d9893;
 $dropdown_links_color:                                #274035;
 $dropdown_links_hover_color:                          #ffffff;
 $dropdown_links_active_color:                         #ffffff;
-$dropdown_links_background_color:                     #f3f2f1;
+$dropdown_links_background_color:                     #fff;
 $dropdown_links_hover_background_color:               #274035;
 $dropdown_links_active_background_color:              #274035;
 
@@ -119,7 +119,7 @@ $masonry_gallery_item_btn_color:                      #274035;
 $masonry_gallery_item_btn_hover_color:                #8d9893;
 
 // Modals
-$modal_background_color:                              #f3f2f1;
+$modal_background_color:                              #fff;
 $modal_background_content_color:                      transparent;
 
 // Card
