additional design work

--- a/src/assets/sass/blocks/_about.scss
+++ b/src/assets/sass/blocks/_about.scss
@@ -15,7 +15,7 @@
 }
 
 @media #{$media_sm} {
-	.align-right {
+	.align-right, .align-left {
 		text-align: center !important;
 		padding-bottom: 10px !important;
 	}
