--- a/src/assets/sass/blocks/_contacts.scss
+++ b/src/assets/sass/blocks/_contacts.scss
@@ -42,7 +42,7 @@
 
     .contact-me-content-2 {
       background-color: $body_background_color;
-      padding: $space_lg $space_md;
+      padding: $space_lg $space_lg;
       margin-bottom: -$space_lg;
 
       @media #{$media_sm} {
