--- a/src/assets/sass/blocks/_contacts.scss
+++ b/src/assets/sass/blocks/_contacts.scss
@@ -84,6 +84,10 @@
   }
 }
 
+.page-gifts .contacts-item .img {
+  min-height: 500px;
+}
+
 .contacts-item {
   position: relative;
   text-align: center;
