--- a/src/assets/sass/blocks/_masonry-gallery.scss
+++ b/src/assets/sass/blocks/_masonry-gallery.scss
@@ -136,6 +136,10 @@ ul.gallery-filter {
 				position: relative;
 				overflow: hidden;
 
+				&:hover {
+					cursor: pointer;
+				}
+
 				.img {
 					&.object-fit {
 						&:before {
