login form mobile placeholdfer txt

--- a/src/assets/sass/components/_forms.scss
+++ b/src/assets/sass/components/_forms.scss
@@ -536,7 +536,9 @@ select {
 
   input[value=""] {
     @media #{$media_sm} {
-      font-size: 15px;
+      font-size: 1rem;
+      padding-left: .3rem;
+      padding-right: .3rem;
     }
   }
 }
